<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Count</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_new_equation">New Equation</string>
    <string name="menu_clear_history">Clear History</string>
    <string name="equals">=</string>
    <string name="clear">C</string>
    <string name="zero">0</string>
    <string name="period">.</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="mult">*</string>
    <string name="divide">/</string>
    <string name="minus">-</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="clr">Clr</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="question">\?</string>
    <string name="pref_reverse_numbers">Reverse number keypad</string>
    <string name="pref_reverse_numbers_summ">Use a computer keybord layout for the number</string>
    <string name="toast_equation_saved">Equation Saved!</string>
    <string name="toast_equation_deleted">Equation %1$s Deleted!</string>
    <string name="toast_error_msg">Replace the ? by entering a number</string>
    <string name="menu_saved_equations">Saved  Equations</string>
    <string name="menu_undo">Undo last</string>
    <string name="msg_no_saved_equ">You have no saved equations. Create one now?</string>

</resources>