<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/menu_item_new_equation"
            android:title="@string/menu_new_equation"
            android:orderInCategory="100"
            android:showAsAction="never"/>
    <item
            android:id="@+id/menu_item_clear_history"
            android:title="@string/menu_clear_history"
            android:orderInCategory="100"
            android:showAsAction="never"/>

    <item
            android:id="@+id/menu_item_xxx"
            android:title="xxx"
            android:orderInCategory="100"
            android:showAsAction="never"/>

    <item
            android:id="@+id/menu_item_settings"
            android:title="@string/menu_settings"
            android:orderInCategory="100"
            android:showAsAction="never"/>
</menu>
